[metadata]
name = backup_and_restore_linux_config
version = 0.0.4

[options]
package_dir =
     =src
packages = backup_and_restore_linux_config
install_requires =
    click
    colorama; python_version > "2"
[options.entry_points]
  console_scripts =
       backup_linux_config = backup_and_restore_linux_config.backup:main
       restore_linux_config = backup_and_restore_linux_config.restore:main